[workspace]
members = [
    "cli",
    "shared",
    "shared_types",
]
resolver = "1"

[workspace.package]
authors = ["Andrea Callea"]
edition = "2021"
repository = "https://github.com/crabapps/crab-news"
license = "Apache-2.0"
keywords = ["atom", "rss", "feed-reader", "rss-reader", "news-client"]
rust-version = "1.66"

[workspace.dependencies]
anyhow = "1.0.89"
crux_core = "0.9.0"
crux_http = "0.10.1"
serde = "1.0.210"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }
